--- a/receitasedespesas/src/messages.properties
+++ b/receitasedespesas/src/messages.properties
@@ -1,2 +1,7 @@
-NotEmpty.receitaDespesa.idObjeto = Evento obrigatório
+NotEmpty.receitaDespesa.descricaoEvento = Evento obrigatório
 NotEmpty.receitaDespesa.idEvento = Código Evento obrigatório
+NotEmpty.receitaDespesa.listaItemCategoria = Categoria obrigatório
+NotEmpty.receitaDespesa.listaItemSubCategoria =  Sub Categoria obrigatório
+NotEmpty.receitaDespesa.idStatus = Status obrigatório
+NotEmpty.receitaDespesa.idCreditoDebito = Crédito Débito obrigatório
+NotEmpty.receitaDespesa.comentario = Comentário  obrigatório
